@@ -1,0 +1,54 @@
+Copyright Less License
+
+=== Licensing terms ===
+
+The Author is German or releasing under German law in the European 
+Union, therefor the German Urheberrecht applies to the Works (Source 
+Code, Text, Program, etc.).
+
+Under German Urheberrecht the Author did not add any Copyright to the 
+Works and thereby placed the Works into the Public Domain (PD) as long 
+as the Works has no Copyright on it.
+
+By using the Copyright Less License (CLL) the Author explicitly states, 
+that the works of the Author never shall be covered by any Copyright.
+
+-- Additional information --
+
+The CLL itself is placed under the CLL.
+
+As the Works is not copyrighted and free of charge, there is no warranty 
+of any kind to the extend permitted by applicable law. You are 
+explicitly informed that under normal circumstances you use the Works 
+solely at your own risk and you cannot hold others liable for any 
+defects, material or immaterial loss or damages which arise from the 
+Works.
+
+For Works covered by the CLL you have the same rights as you have with 
+any other Public Domain Works, except for the single issue that you are 
+not allowed to cover the Works by any Copyright. So you can freely alter 
+and distribute the Works, in whole or in parts, you can use it in or 
+make it part of other Works. However, if the Works is included into 
+something which is covered by a Copyright, you must make sure that the 
+Copyright does not cover the part which falls under the CLL.
+
+You are allowed to drop the CLL and replace it by another license. 
+However you then shall make sure that others are aware of the CLL nature 
+of the Works which came under the CLL, such that the others do not 
+accidentally add their Copyright to the Works, as adding a Copyright not 
+knowingly of the CLL nature of the source still is prohibited by German 
+Urheberrecht. To add a Copyright to something covered by the 
+Urheberrecht, you must make sure you have the permission of the Author 
+to do that, however (by choosing the CLL) the Author has explicitly 
+announced that nobody shall get this right. Also you cannot claim that 
+the author implicitly gave such a permission as the author explicitly 
+neglected this.
+
+-- How to apply this License to your Works --
+
+1) Copy this text from "Copyright Less License" until the end of this 
+   section into a file and name the file COPYRIGHT.CLL in your works.
+
+2) Where you else would add the Copyright add following:
+   This Works is placed under the terms of the Copyright Less License,
+   see file COPYRIGHT.CLL.  USE AT OWN RISK, ABSOLUTELY NO WARRANTY.
